Refactor install command to use descriptors